# synthesizers

./: .gitignore  README.md  TODO.txt  pyproject.toml  setup.cfg  test-synthcity.ipynb  test.ipynb  test.py
examples/: synthesizers.ipynb  synthesizers.py  testing.py  tutorial1_local_data.ipynb  tutorial2_multiple_methods.ipynb  tutorial3_multi_faceted_benchmark.ipynb
examples/data/: titanic.csv
examples/use_cases/: use_case1.ipynb  use_case2.ipynb
synthesizers/: __init__.py  __main__.py
synthesizers/adapters/: __init__.py  base.py  synthcity.py  syntheval.py  synthpop.py
synthesizers/models/: __init__.py  auto.py  base.py  synthcity.py  synthpop.py
synthesizers/pipelines/: __init__.py  base.py  identity.py  tabular_evaluation.py  tabular_generation.py  tabular_split.py  tabular_synthesis.py  tabular_training.py
synthesizers/utils/: __init__.py  formats.py  loading.py  logging.py  subprocess_pool.py  xml.py
