[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthesizers"
version = "1.3.0"
authors = [
  { name="Peter Schneider-Kamp" }
]

description = "A meta framework for synthetic data generation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'datasets>=5,<6',
    'huggingface-hub>=1,<2',
    'numpy>=2,<3',
    'openpyxl',
    'pandas>=2.1,<3',
    'py-synthpop @ git+https://github.com/schneiderkamplab/py-synthpop.git',
    'scikit-learn>=1.7,<1.8',
    'subprocessing',
    'synthcity @ git+https://github.com/schneiderkamplab/synthcity.git@e3e5af43b82b8aca107199de84b7f5293ed39275',
    'syntheval @ git+https://github.com/schneiderkamplab/syntheval.git@8222a118c9d7998511b7a3670288885556b6dfe6',
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/synthesizers"
"Bug Tracker" = "https://github.com/schneiderkamplab/synthesizers/issues"

[tool.hatch.build]
include = [
    'synthesizers',
    'LICENSE',
    'README.md',
]

[tool.hatch.metadata]
allow-direct-references = true
