[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthesizers"
version = "1.3.0"
authors = [
  { name="Peter Schneider-Kamp" }
]

description = "A meta framework for synthetic data generation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'datasets>=5,<6',
    'huggingface-hub>=1,<2',
    'numpy>=2,<3',
    'openpyxl',
    'pandas>=2.1,<4',
    'py-synthpop @ git+https://github.com/schneiderkamplab/py-synthpop.git',
    'scikit-learn>=1.7,<2',
    'subprocessing',
    'synthcity @ git+https://github.com/schneiderkamplab/synthcity.git@b025e60cc139d8944afc29b50398ff5e2e2d61af',
    'syntheval @ git+https://github.com/schneiderkamplab/syntheval.git@42a3d345be517177ab575a3019622ce24a1c75d4',
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/synthesizers"
"Bug Tracker" = "https://github.com/schneiderkamplab/synthesizers/issues"

[tool.hatch.build]
include = [
    'synthesizers',
    'LICENSE',
    'README.md',
]

[tool.hatch.metadata]
allow-direct-references = true
