[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthesizers"
version = "1.4.3"
authors = [
  { name="Peter Schneider-Kamp" }
]

description = "A meta framework for synthetic data generation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'datasets>=5,<6',
    'huggingface-hub>=1,<2',
    'numpy>=2,<3',
    'openpyxl',
    'pandas>=2.1,<4',
    'schneiderkamplab-py-synthpop>=0.1.2.post1,<0.2',
    'scikit-learn>=1.7,<2',
    'subprocessing',
    'schneiderkamplab-synthcity>=0.2.16,<0.3',
    'syntheval>=1.7.2,<2',
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/synthesizers"
"Bug Tracker" = "https://github.com/schneiderkamplab/synthesizers/issues"

[tool.hatch.build]
include = [
    'synthesizers',
    'LICENSE',
    'README.md',
]
